[gd_scene load_steps=2 format=3 uid="uid://bw5u2ekn5c2pf"]

[ext_resource type="Script" uid="uid://bmpo7blsgbrxm" path="res://scripts/main_map.gd" id="1_whrjg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_whrjg")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(144, 81)
zoom = Vector2(4, 4)

[node name="SaveButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 136.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="SaveButton"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 32.0
text = "Save Button"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadButton" type="Button" parent="."]
offset_left = 152.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="LoadButton"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 32.0
text = "Load Button"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Num1" type="Label" parent="."]
offset_left = 24.0
offset_top = 56.0
offset_right = 72.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton1" type="Button" parent="Num1"]
layout_mode = 0
offset_left = -8.0
offset_top = 72.0
offset_right = 16.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="Num1/PlusButton1"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinusButton1" type="Button" parent="Num1"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 56.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="Num1/MinusButton1"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Num2" type="Label" parent="."]
offset_left = 120.0
offset_top = 56.0
offset_right = 168.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton2" type="Button" parent="Num2"]
layout_mode = 0
offset_left = -8.0
offset_top = 72.0
offset_right = 16.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="Num2/PlusButton2"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinusButton2" type="Button" parent="Num2"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 56.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="Num2/MinusButton2"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Num3" type="Label" parent="."]
offset_left = 216.0
offset_top = 56.0
offset_right = 264.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton3" type="Button" parent="Num3"]
layout_mode = 0
offset_left = -8.0
offset_top = 72.0
offset_right = 16.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="Num3/PlusButton3"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinusButton3" type="Button" parent="Num3"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 56.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="Num3/MinusButton3"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Num1/PlusButton1" to="." method="_on_plus_button_1_pressed"]
[connection signal="pressed" from="Num1/MinusButton1" to="." method="_on_minus_button_1_pressed"]
[connection signal="pressed" from="Num2/PlusButton2" to="." method="_on_plus_button_2_pressed"]
[connection signal="pressed" from="Num2/MinusButton2" to="." method="_on_minus_button_2_pressed"]
[connection signal="pressed" from="Num3/PlusButton3" to="." method="_on_plus_button_3_pressed"]
[connection signal="pressed" from="Num3/MinusButton3" to="." method="_on_minus_button_3_pressed"]
